# CppCharacter

./: .editorconfig  .gitignore  README.md  dynamic_cast.cpp  ffmeg.cpp  run_more_times.sh  test_split.sh  test_thread.sh  variant.cpp  variant_polymorphism.cpp
XMake/: xmake.lua
boost/string/: CMakeLists.txt  main.cpp
boost/tokenizer/: CMakeLists.txt  main.cpp
exam/: MyVector.cpp  main.cpp  test.cpp
geometry/: Item.h  Point.h  Register.cpp  Register.h  Segment.cpp  Segment.h  test.cpp
geometry_intersection/: Point.cpp  Point.h  Segment.h
memory/: copy.cpp  half_unit64.cpp  no_new.cpp  reference.cpp  vector.cpp
memory/pointer/: no_pointer.cpp  unique_ptr.cpp
memory/static/: callInstance2.h
operator_system/: process.cpp
pointer/: delete.cpp
std/: any.cpp
std/cpp14/: auto.cpp  lambda.cpp  move.cpp  owner.cpp
std/cpp17/: args.cpp  optional.cpp
std/cpp20/: coroutine.cpp  format.cpp  noexcept.cpp  ranges.cpp  span.cpp  thread_local_storage.cpp  variable_template.cpp
std/stl/: heap.cpp  heap.hpp  map.cpp  vector.cpp
std/string/: regex.cpp
std/variant/: variant_polymorphism.cpp
stl/: map.cpp
string/: operator.cpp  round.cpp  split.cpp  split_test.txt  string_view.cpp
string/split/: main.cpp  split.cpp  split.hpp
structure/allocator/: A.hpp  Allocator.hpp  test.cpp  vector.cpp
structure/event_dispatch/: Application.hpp  Event.cpp  Event.hpp  Window.hpp  main.cpp
structure/filesystem/: gbk.txt  main.cpp
structure/geometry/: Point.hpp  Segment.hpp  main.cpp
template/: auto.cpp  decltype.cpp
thread/: thread.cpp
(+45 files in other folders)
